--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,4 +25,4 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   client_id: <%= ENV['BITBUCKET_CLIENT_ID'] %>
-  http_host: <%= ENV['HTTP_HOST'] %>
+  http_host: <%= ENV['HEROKU_APP_NAME'] %>.herokuapp.com
