--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -26,4 +26,4 @@ production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   client_id: <%= ENV['BITBUCKET_CLIENT_ID'] %>
   http_host: <%= ENV['HEROKU_APP_NAME'] %>.herokuapp.com
-  logentries_token: <% ENV['LOGENTRIES_TOKEN'] %>
+  logentries_token: <%= ENV['LOGENTRIES_TOKEN'] %>
